<?xml version="1.0" encoding="utf-8"?>
<menu
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">
	<group
			android:id="@+id/menu_main">
		<item
				android:id="@+id/menu_record"
				android:title="@string/menu_record"
				android:icon="@drawable/ic_led_off"
				android:enabled="false"
				app:showAsAction="ifRoom"/>

		<item
				android:id="@+id/menu_settings"
				android:title="@string/menu_settings"
				android:icon="@drawable/ic_settings"/>

		<item
				android:id="@+id/menu_output_route"
				android:title="@string/menu_output_route">
			<menu>
				<group android:checkableBehavior="single">
					<item
							android:id="@+id/menu_output_speaker"
							android:checkable="true"
							android:title="@string/menu_output_speaker" />
					<item
							android:id="@+id/menu_output_wired"
							android:checkable="true"
							android:title="@string/menu_output_wired" />
					<item
							android:id="@+id/menu_output_bluetooth"
							android:checkable="true"
							android:title="@string/menu_output_bluetooth" />
				</group>
			</menu>
		</item>

		<item
				android:id="@+id/menu_about"
				android:title="@string/menu_about" />
	</group>
</menu>
