<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/linearLayout">

	<com.vlad805.fmradio.view.TextViewWithSupportReflection
			style="@style/Frequency"
			android:id="@+id/frequency_mhz"
			android:layout_width="match_parent"
			android:layout_height="@dimen/frequency_mhz_height"
			tools:text="88.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

	<ImageView
			android:id="@+id/frequency_mhz_reflection"
			android:scaleType="centerCrop"
			android:layout_width="match_parent"
			android:layout_height="@dimen/frequency_mhz_reflection_height"
			android:contentDescription="@string/nil"
			app:layout_constraintTop_toBottomOf="@+id/frequency_mhz"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"/>


	<ImageView
			style="@style/ControlIcon"
			android:id="@+id/rssi_icon"
			android:src="@drawable/ic_signal_off"
			android:layout_width="@dimen/control_icon_size"
			android:layout_height="@dimen/control_icon_size"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintTop_toTopOf="@+id/frequency_ps"
			app:layout_constraintBottom_toBottomOf="@+id/frequency_ps"
			android:contentDescription="@string/nil" />

	<TextView
			android:id="@+id/rssi_value"
			tools:text="70"
			android:gravity="center_vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toEndOf="@+id/rssi_icon"
			android:layout_marginStart="8dp"
			app:layout_constraintTop_toTopOf="@+id/rssi_icon"
			app:layout_constraintBottom_toBottomOf="@+id/rssi_icon"/>

	<TextView
			style="@style/RDS_PS"
			android:id="@+id/frequency_ps"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/frequency_mhz_reflection"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			tools:text="PS" />

	<TextView
			style="@style/RDS_RT"
			android:id="@+id/frequency_rt"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:lines="2"
			app:layout_constraintTop_toBottomOf="@id/frequency_ps"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			tools:text="RT" />

	<ImageView
			style="@style/ControlIcon"
			android:id="@+id/stereo_mono"
			android:src="@drawable/ic_mono"
			android:layout_width="@dimen/control_icon_size"
			android:layout_height="@dimen/control_icon_size"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintTop_toTopOf="@+id/frequency_ps"
			app:layout_constraintBottom_toBottomOf="@+id/frequency_ps"
			android:contentDescription="@string/nil" />

	<ImageButton
			android:src="@drawable/ic_seek_down"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ctl_seek_down"
			android:background="?android:selectableItemBackgroundBorderless"
			android:contentDescription="@string/seek_down"
			app:layout_constraintEnd_toStartOf="@+id/ctl_go_down"
			app:layout_constraintTop_toTopOf="@+id/ctl_toggle"/>

	<ImageButton
			android:src="@drawable/ic_go_down"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ctl_go_down"
			android:background="?android:selectableItemBackgroundBorderless"
			android:contentDescription="@string/jump_down"
			app:layout_constraintEnd_toStartOf="@+id/ctl_toggle"
			app:layout_constraintTop_toTopOf="@+id/ctl_toggle"/>

	<ImageButton
			android:src="@drawable/ic_pause"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ctl_toggle"
			android:background="?android:selectableItemBackgroundBorderless"
			android:contentDescription="@string/toggle_play_pause"
			app:layout_constraintTop_toBottomOf="@+id/frequency_rt"
			app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

	<ImageButton
			android:src="@drawable/ic_go_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ctl_go_up"
			android:background="?android:selectableItemBackgroundBorderless"
			android:contentDescription="@string/jump_up"
			app:layout_constraintStart_toEndOf="@+id/ctl_toggle"
			app:layout_constraintTop_toTopOf="@+id/ctl_toggle"/>

	<ImageButton
			android:src="@drawable/ic_seek_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ctl_seek_up"
			android:background="?android:selectableItemBackgroundBorderless"
			android:contentDescription="@string/seek_up"
			app:layout_constraintStart_toEndOf="@+id/ctl_go_up"
			app:layout_constraintTop_toTopOf="@+id/ctl_toggle"/>

	<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="@dimen/seek_frequency_height"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:id="@+id/horizontalScrollView">
		<FrameLayout
				android:layout_width="wrap_content"
				android:layout_height="@dimen/seek_frequency_height">
			<com.vlad805.fmradio.view.FrequencySeekView
					style="@style/FrequencySeekBar"
					android:id="@+id/frequency_seek"
					android:thumbTint="@android:color/transparent"
					android:paddingStart="@dimen/seek_frequency_padding_start"
					android:paddingEnd="@dimen/seek_frequency_padding_end"
					android:layout_width="@dimen/seek_frequency_width"
					android:layout_height="match_parent"/>
		</FrameLayout>
	</HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>